New comments added

--- a/Deloitte_project.ipynb
+++ b/Deloitte_project.ipynb
@@ -4469,7 +4469,7 @@
     "            row+=1\n",
     "    return(df2)\n",
     "\n",
-    "#optimal for Solution customers dem & sms (Propensity>0.5) --> one contact with both channels randomly in the year and then in a random month after at least two months\n",
+    "#optimal for Solution customers dem & sms (Propensity>0.5) --> one contact with one of the two channels randomly in the year and then in a random month after at least two months\n",
     "def months_2(df):\n",
     "    for el in range (0, len(df['ID'])):\n",
     "        i = random.randint(2,10)\n",
@@ -4510,7 +4510,7 @@
     "\n",
     "#Strategy for Cross customers TLS (Propensity score >0.5 and <0.2)-->one call in months with no contact\n",
     "\n",
-    "#Strategy for Solution customers  DEM&SMS (Propensity score >0.5 and <0.2)-->one contact with both channels during the year ,we exclude the last month for allowing the concatenation of this strategy with that of solution tls for medium propensity score (contacting the month after)\n",
+    "#Strategy for Solution customers  DEM&SMS (Propensity score >0.5 and <0.2)-->one contact with one of the channels during the year and onther one with the other ,we exclude the last month for allowing the concatenation of this strategy with that of solution tls for medium propensity score (contacting the month after)\n",
     "def month_1(df):\n",
     "    for el in range (0, len(df['ID'])):\n",
     "        i = random.randint(2,12)\n",
@@ -4544,7 +4544,7 @@
     "\n",
     "#Strategy for Cross customers TLS (Propensity score <0.2)--> No call (for avoiding churn)\n",
     "\n",
-    "#Strategy for Solution customers  DEM&SMS (Propensity score <0.2) --> Just one random contact in the year with both channels\n",
+    "#Strategy for Solution customers  DEM&SMS (Propensity score <0.2) --> Just one random contact in the year with one of the two channels and then another with the other channel without overlapping\n",
     "#Apply function month_1 \n",
     "\n",
     "#Strategy for Solution customers TLS (Propensity score <0.2)--> No call (for avoiding churn)\n",
