New comments added

--- a/Deloitte_project.ipynb
+++ b/Deloitte_project.ipynb
@@ -4413,13 +4413,13 @@
     "##### High propensity\n",
     "- Optimal for Cross customers DEM&SMS (Propensity >0.5)--> One contact with each channel every 2 months\n",
     "- Optimal for Cross customers TLS (Propensity>0.5)--> One call in the month after a DEM&SMS contact and another one 6 months later\n",
-    "- Optimal for Solution customers DEM&SMS (Propensity>0.5) --> One contact with both channels randomly in the year and then in a random month after at least two months\n",
+    "- Optimal for Solution customers DEM&SMS (Propensity>0.5) --> For each channel one random contact in the year and then in a random month after at least two months\n",
     "- Optimal for Solution customers TLS (Propensity >0.5)--> One call random call without overlapping with contacts\\\n",
     "\n",
     "##### Medium propensity\n",
     "- Strategy for Cross customers  DEM&SMS (0.2< Propensity score <0.5 )--> One contact with both channels every 3 months\n",
     "- Strategy for Cross customers TLS (0.2< Propensity score <0.5 )-- >One call in months with no contact\n",
-    "- Strategy for Solution customers  DEM&SMS (0.2< Propensity score <0.5 )--> One contact with both channels during the year\n",
+    "- Strategy for Solution customers  DEM&SMS (0.2< Propensity score <0.5 )--> For each channel one contact during the year\n",
     "- Strategy for Solution  customers TLS (0.2< Propensity score <0.5 ) --> One call a month after the first contact by sms or dem\n",
     "\n",
     "##### Low propensity\n",
