--- a/Deloitte_project.ipynb
+++ b/Deloitte_project.ipynb
@@ -2638,7 +2638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2956,7 +2956,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/sc/r0jqlfy569scw9syx066s6n80000gn/T/ipykernel_11312/1062192011.py:1: SettingWithCopyWarning:\n",
+      "/var/folders/sc/r0jqlfy569scw9syx066s6n80000gn/T/ipykernel_4436/1062192011.py:1: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -3170,7 +3170,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/sc/r0jqlfy569scw9syx066s6n80000gn/T/ipykernel_11312/431909494.py:1: SettingWithCopyWarning:\n",
+      "/var/folders/sc/r0jqlfy569scw9syx066s6n80000gn/T/ipykernel_4436/431909494.py:1: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -3370,7 +3370,7 @@
          ],
          "xaxis": "x",
          "y": [
-          118
+          43135
          ],
          "yaxis": "y"
         },
@@ -3396,7 +3396,7 @@
          ],
          "xaxis": "x",
          "y": [
-          464
+          5065
          ],
          "yaxis": "y"
         },
@@ -3422,7 +3422,7 @@
          ],
          "xaxis": "x",
          "y": [
-          5065
+          464
          ],
          "yaxis": "y"
         },
@@ -3448,7 +3448,7 @@
          ],
          "xaxis": "x",
          "y": [
-          43135
+          118
          ],
          "yaxis": "y"
         }
@@ -4325,7 +4325,6 @@
     "v3=len(solsms_tls)\n",
     "v4=len(solmail)\n",
     "l=[v1,v2,v3,v4]\n",
-    "l.sort()\n",
     "columns=['cross_sms_tls','cross_mail','solution_sms_tls','solution_mail']\n",
     "dizionario={'#clients':l,'typology':columns}\n",
     "a=pd.DataFrame(dizionario)\n",
@@ -4413,13 +4412,13 @@
     "##### High propensity\n",
     "- Optimal for Cross customers DEM&SMS (Propensity >0.5)--> One contact with each channel every 2 months\n",
     "- Optimal for Cross customers TLS (Propensity>0.5)--> One call in the month after a DEM&SMS contact and another one 6 months later\n",
-    "- Optimal for Solution customers DEM&SMS (Propensity>0.5) --> For each channel one random contact in the year and then in a random month after at least two months\n",
+    "- Optimal for Solution customers DEM&SMS (Propensity>0.5) --> One contact with both channels randomly in the year and then in a random month after at least two months\n",
     "- Optimal for Solution customers TLS (Propensity >0.5)--> One call random call without overlapping with contacts\\\n",
     "\n",
     "##### Medium propensity\n",
     "- Strategy for Cross customers  DEM&SMS (0.2< Propensity score <0.5 )--> One contact with both channels every 3 months\n",
     "- Strategy for Cross customers TLS (0.2< Propensity score <0.5 )-- >One call in months with no contact\n",
-    "- Strategy for Solution customers  DEM&SMS (0.2< Propensity score <0.5 )--> For each channel one contact during the year\n",
+    "- Strategy for Solution customers  DEM&SMS (0.2< Propensity score <0.5 )--> One contact with both channels during the year\n",
     "- Strategy for Solution  customers TLS (0.2< Propensity score <0.5 ) --> One call a month after the first contact by sms or dem\n",
     "\n",
     "##### Low propensity\n",
@@ -4469,7 +4468,7 @@
     "            row+=1\n",
     "    return(df2)\n",
     "\n",
-    "#optimal for Solution customers dem & sms (Propensity>0.5) --> one contact with one of the two channels randomly in the year and then in a random month after at least two months\n",
+    "#optimal for Solution customers dem & sms (Propensity>0.5) --> one contact with both channels randomly in the year and then in a random month after at least two months\n",
     "def months_2(df):\n",
     "    for el in range (0, len(df['ID'])):\n",
     "        i = random.randint(2,10)\n",
@@ -4510,7 +4509,7 @@
     "\n",
     "#Strategy for Cross customers TLS (Propensity score >0.5 and <0.2)-->one call in months with no contact\n",
     "\n",
-    "#Strategy for Solution customers  DEM&SMS (Propensity score >0.5 and <0.2)-->one contact with one of the channels during the year and onther one with the other ,we exclude the last month for allowing the concatenation of this strategy with that of solution tls for medium propensity score (contacting the month after)\n",
+    "#Strategy for Solution customers  DEM&SMS (Propensity score >0.5 and <0.2)-->one contact with both channels during the year ,we exclude the last month for allowing the concatenation of this strategy with that of solution tls for medium propensity score (contacting the month after)\n",
     "def month_1(df):\n",
     "    for el in range (0, len(df['ID'])):\n",
     "        i = random.randint(2,12)\n",
@@ -4544,7 +4543,7 @@
     "\n",
     "#Strategy for Cross customers TLS (Propensity score <0.2)--> No call (for avoiding churn)\n",
     "\n",
-    "#Strategy for Solution customers  DEM&SMS (Propensity score <0.2) --> Just one random contact in the year with one of the two channels and then another with the other channel without overlapping\n",
+    "#Strategy for Solution customers  DEM&SMS (Propensity score <0.2) --> Just one random contact in the year with both channels\n",
     "#Apply function month_1 \n",
     "\n",
     "#Strategy for Solution customers TLS (Propensity score <0.2)--> No call (for avoiding churn)\n",
@@ -4615,7 +4614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
